# Slitherlink-Solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run_example.sh
example/: 10x10-1.txt  16x16-1.txt  6x6-1.txt
include/: slitherlink.hpp
source/: CMakeLists.txt  main.cpp  slitherlink.cpp
